force-app/main/default/objects/ssot__PromotionOffer__dlm/fields/ssot__InStoreDisplayEndDate__c.field-meta.xml
<CustomField>
    <fullName>ssot__InStoreDisplayEndDate__c</fullName>
    <label>In Store Display End Date</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>InStoreDisplayEndDate</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Date</type>
</CustomField>