force-app/main/default/objects/ssot__PromotionOffer__dlm/fields/ssot__InStoreDisplayStartDate__c.field-meta.xml
<CustomField>
    <fullName>ssot__InStoreDisplayStartDate__c</fullName>
    <label>In Store Display Start Date</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>InStoreDisplayStartDate</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Date</type>
</CustomField>