force-app/main/default/objects/ssot__PromotionOffer__dlm/fields/ssot__ShipmentStartDate__c.field-meta.xml
<CustomField>
    <fullName>ssot__ShipmentStartDate__c</fullName>
    <label>Shipment Start Date</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ShipmentStartDate</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Date</type>
</CustomField>